# api.yaml
@@ -11,12 +11,17 @@ servers:
     description: no host specified
   - url: 'http://localhost:3000/api/1.0'
     description: CfClient description
+tags:
+  - name: client
+  - name: metrics
 paths:
   '/client/env/{environmentUUID}/feature-configs':
     get:
       summary: Get all feature flags activations
       description: All feature flags with activations in project environment
       operationId: GetFeatureConfig
+      tags:
+        - client
       parameters:
         - name: environmentUUID
           in: path
@@ -39,6 +44,8 @@ paths:
     get:
       summary: Get feature config
       operationId: GetFeatureConfigByIdentifier
+      tags:
+        - client
       parameters:
         - name: identifier
           in: path
@@ -66,6 +73,8 @@ paths:
       summary: Retrieve all segments.
       description: Used to retrieve all segments for certain account id.
       operationId: GetAllSegments
+      tags:
+        - client
       parameters:
         - name: environmentUUID
           in: path
@@ -97,6 +106,8 @@ paths:
       summary: Retrieve a segment by identifier
       description: Used to retrieve a segment for a certain account id by identifier
       operationId: GetSegmentByIdentifier
+      tags:
+        - client
       parameters:
         - name: identifier
           in: path
@@ -132,6 +143,8 @@ paths:
       summary: Authenticate with the admin server.
       description: Used to retrieve all target segments for certain account id.
       operationId: Authenticate
+      tags:
+        - client
       requestBody:
         content:
           application/json:
@@ -156,6 +169,8 @@ paths:
     get:
       summary: Get feature evaluations for target
       operationId: GetEvaluations
+      tags:
+        - client
       parameters:
         - name: environmentUUID
           in: path
@@ -187,6 +202,8 @@ paths:
     get:
       summary: Get feature evaluations for target
       operationId: GetEvaluationByIdentifier
+      tags:
+        - client
       parameters:
         - name: environmentUUID
           in: path
@@ -215,10 +232,37 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Evaluation'
+  '/metrics/{environment}':
+    post:
+      tags:
+        - metrics
+      summary: Send metrics to the Analytics server.
+      description: Send metrics to Analytics server
+      operationId: postMetrics
+      parameters:
+        - $ref: '#/components/parameters/environmentPathParam'
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Metrics'
+      security:
+        - BearerAuth: []
+      responses:
+        '200':
+          description: OK
+        '401':
+          $ref: '#/components/responses/Unauthenticated'
+        '403':
+          $ref: '#/components/responses/Unauthorized'
+        '500':
+          $ref: '#/components/responses/InternalServerError'
   /stream:
     get:
       summary: Stream endpoint.
       operationId: Stream
+      tags:
+        - client
       parameters:
         - in: header
           name: API-Key
@@ -572,6 +616,7 @@ components:
         - itemCount
         - pageSize
         - pageIndex
+        - pageIndex
     Evaluation:
       type: object
       properties:
@@ -591,6 +636,66 @@ components:
       type: array
       items:
         $ref: '#/components/schemas/Evaluation'
+    KeyValue:
+      type: object
+      properties:
+        key:
+          type: string
+        value:
+          type: string
+      required:
+        - key
+        - value
+    TargetData:
+      type: object
+      properties:
+        identifier:
+          type: string
+        name:
+          type: string
+        attributes:
+          type: array
+          items:
+            $ref: '#/components/schemas/KeyValue'
+      required:
+        - name
+        - identifier
+        - attributes
+    MetricsData:
+      type: object
+      properties:
+        timestamp:
+          type: integer
+          format: int64
+          example: 1608175465
+          description: time at when this data was recorded
+        count:
+          type: integer
+        metricsType:
+          type: string
+          enum:
+            - FFMETRICS
+          description: This can be of type FeatureMetrics
+        attributes:
+          type: array
+          items:
+            $ref: '#/components/schemas/KeyValue'
+      required:
+        - attributes
+        - count
+        - timestamp
+        - metricsType
+    Metrics:
+      type: object
+      properties:
+        targetData:
+          type: array
+          items:
+            $ref: '#/components/schemas/TargetData'
+        metricsData:
+          type: array
+          items:
+            $ref: '#/components/schemas/MetricsData'
   securitySchemes:
     BearerAuth:
       type: http
@@ -621,3 +726,11 @@ components:
         application/json:
           schema:
             $ref: '#/components/schemas/Error'
+  parameters:
+    environmentPathParam:
+      name: environment
+      in: path
+      required: true
+      description: environment parameter in query.
+      schema:
+        type: string
